# kaelix

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Cargo.toml
backend/src/: docker.rs  main.rs  routes.rs
frontend/: package.json
frontend/app/: layout.tsx  page.tsx
src/: main.rs  state.rs
src/routes/: root.rs  version.rs
