[package]
name = "kaelix"
version = "0.0.1"
edition = "2024"

[dependencies]
axum = "0.8.9"
bollard = "0.21.0"
futures-util = "0.3.31"
serde_json = "1.0.151"
tokio = { version = "1.53.1", features = ["macros", "rt-multi-thread"] }
tower = "0.5.3"
tower-http = { version = "0.7.0", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
